--- a/web/game.ejs
+++ b/web/game.ejs
@@ -17,6 +17,8 @@
         <div id="e4" class="box"></div>
     </div>
 
+    <h3 id="solution">The word was</h3>
+
     <input id="keyboard" type="text" placeholder="tap here for keyboard" /><br>
     <button id="submit">submit</button>
 
@@ -28,6 +30,6 @@
 
     <script>start()</script>
 
-    <footer>made with 💖 by Millie</footer>
+    <footer>v1.1 | made with 💖 by Millie</footer>
 </body>
 </html>
