make PWA compatible

--- a/web/game.ejs
+++ b/web/game.ejs
@@ -6,6 +6,7 @@
     <title>Goodluckle</title>
     <link rel="stylesheet" href="game.css">
     <script src="game.js"></script>
+    <link rel="manifest" href="pwa/manifest.json">
 </head>
 <body>
     <h1 class="title">Goodluckle</h1>
