--- a/web/assets/game.css
+++ b/web/assets/game.css
@@ -97,3 +97,15 @@ footer {
    text-align: center;
    width: 100vw;
 }
+
+@keyframes tileFlip {
+    0% {
+        transform: scaleY(100%);
+    }
+    50% {
+        transform: scaleY(0%);
+    }
+    100% {
+        transform: scaleY(100%);
+    }
+}
