--- a/web/game.ejs
+++ b/web/game.ejs
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goodluckle</title>
-    <link rel="stylesheet" href="game.css">
-    <script src="game.js"></script>
+    <link rel="stylesheet" href="game.css?v=20250708-0510EST">
+    <script src="game.js?v=20250708-0510EST"></script>
     <link rel="manifest" href="pwa/manifest.json">
+    <meta property="pagever" content="20250708-0508EST">
+
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 </head>
 <body>
     <h1 class="title">Goodluckle</h1>
@@ -31,6 +36,6 @@
 
     <script>start()</script>
 
-    <footer>v1.1 | made with 💖 by Millie</footer>
+    <footer>v1.2 | made with 💖 by Millie</footer>
 </body>
 </html>
