--- a/web/game.ejs
+++ b/web/game.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goodluckle</title>
-    <link rel="stylesheet" href="game.css?v=20250716-1518CST">
-    <script src="embeddedkeyboard.js?v=20250716-1518CST"></script>
-    <script src="game.js?v=20250716-1518CST"></script>
+    <link rel="stylesheet" href="game.css?v=20250720-1901CST">
+    <script src="embeddedkeyboard.js?v=20250720-1901CST"></script>
+    <script src="game.js?v=20250720-1901CST"></script>
     <link rel="manifest" href="pwa/manifest.json">
-    <meta property="pagever" content="20250716-1518CST">
+    <meta property="pagever" content="20250720-1901CST">
 
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
@@ -30,6 +30,10 @@
         <h1 id="after-header">you lose!</h1>
         <h2 id="after-sub">what did you expect? to win the 1-in-14855 chance of picking the right word?</h2>
         <button id="share">click to share your silly results</button>
+        <div class="insecure-copy">
+            <p id="isc-notice" style="font-style: italic; display:none;">It appears this is not a HTTPS instance. You must manually copy your results.</p>
+            <textarea value="aaaaa" id="isc-box" disabled="true"></textarea>
+        </div>
     </div>
 
     <div class="keyboard" id="keyboard">
@@ -68,9 +72,9 @@
             <button class="slightly-wider" id="backspace">⌫</button>
         </div>
     </div>
-
+    
+    <footer id="foot">v1.4 | made with 💖 by Millie</footer>
+    
     <script>start()</script>
-
-    <footer>v1.3 | made with 💖 by Millie</footer>
 </body>
 </html>
