fix formatting bug

--- a/web/game.ejs
+++ b/web/game.ejs
@@ -31,7 +31,7 @@
         <h2 id="after-sub">what did you expect? to win the 1-in-14855 chance of picking the right word?</h2>
         <button id="share">click to share your silly results</button>
         <div class="insecure-copy">
-            <p id="isc-notice" style="font-style: italic; display:none;">It appears this is not a HTTPS instance. You must manually copy your results.</p>
+            <p id="isc-notice" style="font-style: italic; display:none;">It appears this is not a HTTPS instance. You must manually copy your results.</p><br>
             <textarea value="aaaaa" id="isc-box" disabled="true"></textarea>
         </div>
     </div>
