--- a/web/assets/game.css
+++ b/web/assets/game.css
@@ -4,7 +4,11 @@ body {
     background-color: #0f0f0f;
     color: white;
     text-align: center;
-    font-family: sans-serif;
+    font-family: monospace;
+}
+
+h1 {
+    font-size: 3rem;
 }
 
 #solution {
@@ -65,9 +69,10 @@ input {
     padding: .5rem 1rem;
     font-size: 1.5rem;
     border-radius: .6rem;
-    background-color: #f05ce8;
+    background-color: #538d4e;
     border: none;
     color: white;
+    font-family: monospace;
 }
 
 @media screen and (max-width: 600px) {
@@ -80,6 +85,10 @@ input {
     /* input, #submit {
         display: inline;
     } */
+     
+    #share {
+        font-size: 1rem;
+    }
 }
 
 .filled-wrong {
