--- a/web/assets/game.css
+++ b/web/assets/game.css
@@ -191,3 +191,22 @@ footer {
     }
     
 }
+
+@keyframes pulse-h3 {
+    0% {
+        color: white;
+    }
+    50% {
+        color: rgb(18,138,250);
+    }
+    100% {
+        color: white;
+    }
+}
+
+.ba h3 {
+    animation: 1s pulse-h3 infinite;
+}
+.ba a {
+    color: rgb(18,138,250);
+}
