--- a/web/game.ejs
+++ b/web/game.ejs
@@ -36,6 +36,10 @@
         </div>
     </div>
 
+    <div class="ba">
+        <h3>like Blue Archive? try out <a href="https://millie.zone/blue-archival">Blue Archival</a>!</h3>
+    </div>
+
     <div class="keyboard" id="keyboard">
         <div class="row top">
             <button id="key-q">Q</button>
