fix navigator.share triggering on desktop

--- a/web/game.ejs
+++ b/web/game.ejs
@@ -6,7 +6,7 @@
     <title>Goodluckle</title>
     <link rel="stylesheet" href="game.css?v=20250720-1901CST">
     <script src="embeddedkeyboard.js?v=20250720-1901CST"></script>
-    <script src="game.js?v=20250720-1901CST"></script>
+    <script src="game.js?v=aris"></script>
     <link rel="manifest" href="pwa/manifest.json">
     <meta property="pagever" content="20250720-1901CST">
 
