--- a/web/game.ejs
+++ b/web/game.ejs
@@ -6,7 +6,7 @@
     <title>Goodluckle</title>
     <link rel="stylesheet" href="game.css?v=20250720-1901CST">
     <script src="embeddedkeyboard.js?v=20250720-1901CST"></script>
-    <script src="game.js?v=arisu"></script>
+    <script src="game.js?v=neru"></script>
     <link rel="manifest" href="pwa/manifest.json">
     <meta property="pagever" content="20250720-1901CST">
 
@@ -23,6 +23,8 @@
         <div id="e3" class="box"></div>
         <div id="e4" class="box"></div>
     </div>
+
+    <button id="link-okabot">link to okabot (do this before playing!)</button>
 
     <h3 id="solution">The word was</h3>
 
